--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 
 # Ignore bundler config.
 /.bundle
+.byebug_history
+/.docker-sync
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -17,7 +19,6 @@
 # Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
-.byebug_history
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
