Fix running docker container for specs
So far we were forced to run docker-compose run --rm instead docker-compose exec
Now we can use exec which is much faster

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - "memcached"
   specs:
     image: wdf/api:test
+    command: tail -f /dev/null
     env_file:
       - .env_test
     volumes:
