Add build env config

--- a/ui/vercel.json
+++ b/ui/vercel.json
@@ -18,5 +18,10 @@
   ],
   "env": {
     "API_URL": "@wdf-api-url"
+  },
+  "build": {
+    "env": {
+      "API_URL": "@wdf-api-url"
+    }
   }
 }
