Update the Dockerfile.prod not install development gems in the production environment

--- a/api/docker/Dockerfile.prod
+++ b/api/docker/Dockerfile.prod
@@ -22,6 +22,7 @@ RUN apt-get update -yqq \
 # and install gems
 COPY Gemfile* /tmp/
 WORKDIR /tmp
+RUN bundle config set without 'development test'
 RUN bundle install
 
 # Create a directory for our application
