--- a/api/Gemfile
+++ b/api/Gemfile
@@ -23,12 +23,11 @@ gem 'bcrypt', '~> 3.1.7'
 
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.2', require: false
-gem 'faker', :git => 'https://github.com/faker-ruby/faker.git', :branch => 'master', require: false
+gem 'faker', git: 'https://github.com/faker-ruby/faker.git', branch: 'master', require: false
 gem 'fast_jsonapi'
 gem 'jsonapi_errors_handler', '>= 0.2.0', require: false
 gem 'octokit', '~> 4.0', require: false
 gem 'pagy', '~> 3.5', require: false
-
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 # gem 'rack-cors'
@@ -45,4 +44,8 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
+end
+
+group :test do
+  gem 'database_cleaner-active_record'
 end
