--- a/ui/package.json
+++ b/ui/package.json
@@ -45,6 +45,7 @@
     "marked": "^1.1.0",
     "prettier": "^1.19.1",
     "stylelint": "^10.1.0",
+    "vue-infinite-loading": "^2.4.5",
     "vue-jest": "^4.0.0-0"
   }
 }
