--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -27,9 +27,7 @@ jobs:
       uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
       with:
         ruby-version: 2.6
-    - name: Go to the API folder
-      run: cd api
     - name: Install dependencies
-      run: bundle install
+      run: cd api && bundle install
     - name: Run tests
-      run: bundle exec rake
+      run: cd api && bundle exec rake
