--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -15,19 +15,42 @@ on:
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
-
+    services:
+      postgres:
+        image: postgres:11
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
     - uses: actions/checkout@v2
+    - name: Install dependent libraries
+      run: sudo apt-get install libpq-dev
     - name: Set up Ruby
     # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
     # change this to (see https://github.com/ruby/setup-ruby#versioning):
-    # uses: ruby/setup-ruby@v1
-      uses: ruby/setup-ruby@ec106b438a1ff6ff109590de34ddc62c540232e0
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: 2.7.1
     - name: Install dependencies
-      run: cd api && bundle install
-    - name: Run tests
-      run: cd api && bundle exec rake
+      run: cd api && bundle install --jobs 4 --retry 3
+    - name: Setup Database
+      run: |
+        bundle exec rake db:create
+        bundle exec rake db:schema:load
+      env:
+        RAILS_ENV: test
+        DB_ADAPTER: postgresql
+        DB_USER: postgres
+        DB_PASSWORD: postgres
+        DB_NAME: postgres
+    - name: Run RSpec
+      run: COVERAGE=true bundle exec rspec  --require rails_helper
+      env:
+        DB_ADAPTER: postgresql
+        DB_USER: postgres
+        DB_PASSWORD: postgres
+        DB_NAME: postgres
