--- a/ui/package.json
+++ b/ui/package.json
@@ -27,6 +27,8 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@nuxtjs/vuetify": "^1.2.0",
+    "axios": "^0.19.2",
+    "marked": "^1.1.0",
     "nuxt": "^2.0.0",
     "vue-disqus": "^4.0.0"
   },
@@ -44,7 +46,6 @@
     "husky": "^4.0.0",
     "jest": "^24.1.0",
     "lint-staged": "^10.0.0",
-    "marked": "^1.1.0",
     "prettier": "^1.19.1",
     "stylelint": "^10.1.0",
     "vue-infinite-loading": "^2.4.5",
