--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,12 @@
     {
       "src": "nuxt.config.js",
       "use": "@nuxtjs/now-builder",
-      "config": {}
+      "config": {
+        "serverFiles": [
+          "server-middleware/**"
+        ]
+      }
+
     }
   ],
   "routes": [
