--- a/config/nginx/conf.d/default.conf
+++ b/config/nginx/conf.d/default.conf
@@ -1,22 +1,23 @@
 server {
-    server_name  api.webdevflow.com;
+    # server_name  159.203.119.39;
+    server_name api.webdevflow.com;
     listen       80;
-    listen       443 ssl http2;
-    include      letsencrypt.conf;
+    # listen       443 ssl http2;
+    # include      letsencrypt.conf;
 
     # client_max_body_size 10M;
     # keepalive_timeout 10;
-    proxy_set_header  Host $host;
-    proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_pass_header Set-Cookie;
+    # proxy_set_header  Host $host;
+    # proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+    # proxy_pass_header Set-Cookie;
 
-    ssl_certificate_key /etc/nginx/certs/live/api.webdevflow.com/privkey.pem;
-    ssl_certificate     /etc/nginx/certs/live/api.webdevflow.com/fullchain.pem;
+    # ssl_certificate_key /etc/nginx/certs/live/api.webdevflow.com/privkey.pem;
+    # ssl_certificate     /etc/nginx/certs/live/api.webdevflow.com/fullchain.pem;
 
     location / {
-        if ($scheme != "https") {
-            rewrite ^ https://$host$uri permanent;
-        }
+        # if ($scheme != "https") {
+        #     rewrite ^ https://$host$uri permanent;
+        # }
 
         proxy_pass http://api:3000;
     }
