--- a/ui/package.json
+++ b/ui/package.json
@@ -47,6 +47,7 @@
     "jest": "^24.1.0",
     "lint-staged": "^10.0.0",
     "prettier": "^1.19.1",
+    "sinon": "^9.0.2",
     "stylelint": "^10.1.0",
     "vue-infinite-loading": "^2.4.5",
     "vue-jest": "^4.0.0-0"
