Add caching mechanism to articles

--- a/config/docker-compose.prod.yml
+++ b/config/docker-compose.prod.yml
@@ -5,6 +5,8 @@ volumes:
     external: false
 
 services:
+  memcached:
+    image: memcached:alpine
   webserver:
     build:
       context: ./nginx
