--- a/api/Gemfile
+++ b/api/Gemfile
@@ -23,11 +23,14 @@ gem 'bcrypt', '~> 3.1.7'
 
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.4.2', require: false
+gem 'dalli', require: false
 gem 'faker', git: 'https://github.com/faker-ruby/faker.git', branch: 'master', require: false
 gem 'fast_jsonapi'
 gem 'jsonapi_errors_handler', '>= 0.2.0', require: false
+gem 'memcachier'
 gem 'octokit', '~> 4.0', require: false
 gem 'pagy', '~> 3.5', require: false
+gem 'rack-cache'
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 # gem 'rack-cors'
