Change command of the memcached top specify proper resources

--- a/config/docker-compose.prod.yml
+++ b/config/docker-compose.prod.yml
@@ -7,6 +7,7 @@ volumes:
 services:
   memcached:
     image: memcached:alpine
+    command: "memcached -m 500 -I 2m"
   webserver:
     build:
       context: ./nginx
