--- a/ui/package.json
+++ b/ui/package.json
@@ -28,9 +28,11 @@
     "@nuxtjs/pwa": "^3.0.0-0",
     "@nuxtjs/vuetify": "^1.2.0",
     "axios": "^0.19.2",
+    "cookie-universal-nuxt": "^2.1.4",
     "marked": "^1.1.0",
     "nuxt": "^2.0.0",
-    "vue-disqus": "^4.0.0"
+    "vue-disqus": "^4.0.0",
+    "vue-loader": "15.9.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^2.0.0",
