--- a/api/config/database.yml
+++ b/api/config/database.yml
@@ -1,12 +1,13 @@
 
 default: &default
-  adapter: postgresql
+  adapter: <%= ENV['DB_ADAPTER'] %>
   encoding: unicode
+  pool: 5
   user: <%= ENV['DB_USER'] %>
   host: <%= ENV['DB_HOST'] %>
   database: <%= ENV['DB_NAME'] %>
   password: <%= ENV['DB_PASSWORD'] %>
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  port: 5432
 
 development:
   <<: *default
@@ -17,6 +18,6 @@ test:
   database: wdf_test
 
 production:
-  port: <%= ENV['DB_PORT'] %>
   <<: *default
-  password: <%= ENV['DB_PASSWORD'] %>
+  prepared_statements: false
+  port: <%= ENV['DB_PORT'] %>
